--- a/Rummage/MainWindow.xaml
+++ b/Rummage/MainWindow.xaml
@@ -1,8 +1,105 @@
 ﻿<Window x:Class="Rummage.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+        Title="Rummage" Height="500" Width="1000" ResizeMode="CanResizeWithGrip">
+    <DockPanel  Name="dockPanelMain">
+        <StatusBar Height="22" Name="statusBar1" DockPanel.Dock="Bottom">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.5*"/>
+                    <ColumnDefinition Width="0.5*"/>
+                </Grid.ColumnDefinitions>
+
+                <TextBlock Name="CurrentStatus" Grid.Row="0" Grid.Column="0">Ready.</TextBlock>
+            </Grid>
+        </StatusBar>
+        <Grid Name="gridMain">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" MinHeight="150" MaxHeight="150"/>
+                <RowDefinition Height="2" MinHeight="2" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+            </Grid.ColumnDefinitions>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.7*"/>
+                    <ColumnDefinition Width="0.3*"/>
+                </Grid.ColumnDefinitions>
+                <Grid Name="gridSearchParms" Grid.Column="0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" MinHeight="30" />
+                        <RowDefinition Height="*" MaxHeight="90"/>
+                        <RowDefinition Height="Auto" MinHeight="30" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="300"/>
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <!-- Column 1 (Search for) -->
+                    <Label Name="labelSearchStrings" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Content="Search for..." />
+                    <TextBox Name="textBoxSearchStrings" Grid.Row="1" Grid.Column="0" Text="xanthalas" AcceptsReturn="True" />
+                    <!-- Column 2 (Where to search) -->
+                    <Label Name="labelFolders" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Bottom" Content="Search here..." />
+                    <TextBox Name="textBoxFolders" Grid.Row="1" Grid.Column="1" Text="d:\code\Rummage" AcceptsReturn="True" />
+                    <CheckBox Name="chkRecurse" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" IsChecked="True">Search sub-folders</CheckBox>
+                    <CheckBox Name="chkCaseSensitive" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left">Case-sensitive search</CheckBox>
+                    <Button Name="btnStart" Click="btnStart_Click" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" Width="150">Start Search</Button>
+                </Grid>
+                <TabControl Name="tabFilters" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2">
+                    <TabItem Name="tabItemIncludes" Header="Include filters">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="0.5*"/>
+                                <ColumnDefinition Width="0.5*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <!-- (Files to include) -->
+                            <Label Name="labelIncludeFiles" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Content="Include files..." />
+                            <TextBox Name="textBoxIncludeFiles" Grid.Row="1" Grid.Column="0" Text="" AcceptsReturn="True" MaxHeight="92" />
+
+                            <!-- (Folders to include) -->
+                            <Label Name="labelIncludeFolders" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Bottom" Content="Include folders..." />
+                            <TextBox Name="textBoxIncludeFolders" Grid.Row="1" Grid.Column="1" Text="" AcceptsReturn="True" MaxHeight="92"/>
+
+                        </Grid>
+                    </TabItem>
+                    <TabItem  Name="tabItemExcludes" Header="Exclude filters">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="*" MaxHeight="100" />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="0.5*"/>
+                                <ColumnDefinition Width="0.5*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <!-- (Files to exclude) -->
+                            <Label Name="labelExcludeFiles" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Content="Exclude files..." />
+                            <TextBox Name="textBoxExcludeFiles" Grid.Row="1" Grid.Column="0" Text="" AcceptsReturn="True" MaxHeight="92" />
+
+                            <!-- (Folders to exclude) -->
+                            <Label Name="labelExcludeFolders" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Bottom" Content="Exclude folders..." />
+                            <TextBox Name="textBoxExcludeFolders" Grid.Row="1" Grid.Column="1" Text="" AcceptsReturn="True" MaxHeight="92" />
+
+                        </Grid>
+
+                    </TabItem>
+                </TabControl>
+
+            </Grid>
+            <StackPanel Name="panelSeparator" Background="Black" Grid.Row="1" Grid.Column="0" />
+            <ScrollViewer Grid.Row="2" Grid.Column="0" HorizontalScrollBarVisibility="Auto">
+                <TextBlock Name="textBlockResults" Text="Search results..."/>
+            </ScrollViewer>
+        </Grid>
+    </DockPanel>
 </Window>
