--- a/Rummage/MainWindow.xaml
+++ b/Rummage/MainWindow.xaml
@@ -77,7 +77,8 @@
                     </Grid.ColumnDefinitions>
 					<Menu Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left">
 						<MenuItem Header="File">
-							<MenuItem Header="Exit" Click="MenuItem_Click"></MenuItem>
+                            <MenuItem Name="MainMenuFileSearchHistory"  Header="Search History" Click="MainMenuFileSearchHistory_Click"></MenuItem>
+                            <MenuItem Header="Exit" Click="MenuItem_Click"></MenuItem>
 						</MenuItem>
 						<MenuItem Header="Options"></MenuItem>
 						<MenuItem Header="Help">
@@ -89,6 +90,7 @@
                     <Border Grid.Column="0" Grid.Row="1" BorderBrush="Black" BorderThickness="0,0,1,0">
                         <TextBox Name="textBoxSearchStrings" Grid.Row="1" Grid.Column="0" MaxHeight="90" Text="" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" TextChanged="textBoxSearchStrings_TextChanged" TabIndex="0" Opacity="0.8" />
                     </Border>
+                    <Button Name="btnSearchHistory" Grid.Row="1" Grid.Column="0" Width="20" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="right" Click="btnSearchHistory_Click">=</Button>
                     <!-- Column 2 (Where to search) -->
 					<Label Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="16" FontWeight="Bold">Search here ...</Label>
                     <Border Grid.Column="1" Grid.Row="0" BorderBrush="Black" BorderThickness="0,0,0,1">
@@ -104,13 +106,14 @@
                         </Grid>
                     </Border>
                     <TextBox Name="textBoxFolders"  Grid.Row="1" Grid.Column="1" MaxHeight="90" Text="" AcceptsReturn="True" TextChanged="textBoxFolders_TextChanged" VerticalScrollBarVisibility="Auto" TabIndex="1" Opacity="0.8"/>
+                    <Button Name="btnFoldersHistory" Grid.Row="1" Grid.Column="1" Width="20" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="right" Click="btnFoldersHistory_Click">=</Button>
                     
                     <Border Grid.Column="0" Grid.Row="2" BorderBrush="Gray" BorderThickness="0,1,0,0" />
                     <Border Grid.Column="1" Grid.Row="2" BorderBrush="Gray" BorderThickness="0,1,0,0" />
                     <CheckBox Name="chkRecurse" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left" IsChecked="True" Margin="10,0,0,0" TabIndex="4" Checked="chkRecurse_Checked">Search sub-folders</CheckBox>
                         <CheckBox Name="chkBinaries" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right" IsChecked="False" Margin="0,0,30,0" TabIndex="5" Checked="chkBinaries_Checked">Search binaries</CheckBox>
                         <CheckBox Name="chkCaseSensitive" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" TabIndex="6" Checked="chkCaseSensitive_Checked">Case-sensitive search</CheckBox>
-                        <Button Name="btnStart" Click="btnStart_Click" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" Width="150" Margin="0,0,10,0" TabIndex="3">
+                        <Button Name="btnStart" Click="btnStart_Click" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" Width="150" Margin="0,0,10,0" TabIndex="3" IsDefault="True">
                         	<Button.Background>
                         		<LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
                         			<GradientStop Color="#FFF3F3F3" Offset="0"/>
@@ -173,6 +176,15 @@
                         </Grid>
 
                     </TabItem>
+                    <TabItem  Name="tabItemRegexHelp">
+                        <TabItem.Header>
+                            <StackPanel Orientation="Horizontal">
+                                <Label Name="labelRegexHelpTabHeader">Regex Help</Label>
+                            </StackPanel>
+                        </TabItem.Header>
+                        <WebBrowser Name="regexHelpDocument"/>
+                    </TabItem>
+
                 </TabControl>
 
             </Grid>
