--- a/Rummage/MainWindow.xaml
+++ b/Rummage/MainWindow.xaml
@@ -209,7 +209,7 @@
                                 </GridView>
                             </ListView.View>
                         </ListView>
-                        <ListView x:Name="listViewMatchesForSelection" Grid.Column="0" Grid.Row="2" TabIndex="13"  >
+                        <ListView x:Name="listViewMatchesForSelection" Grid.Column="0" Grid.Row="2" MouseDoubleClick="listViewMatchesForSelection_MouseDoubleClick" TabIndex="13"  >
                             <ListView.View>
                                 <GridView>
                                     <GridViewColumn Width="Auto" Header="Line #" DisplayMemberBinding="{Binding MatchLineNumber}" />
